# MLOps-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  model.onnx  pyproject.toml  setup.cfg
.dvc/: config
data/: t10k-images-idx3-ubyte.gz.dvc  t10k-labels-idx1-ubyte.gz.dvc  train-images-idx3-ubyte.gz.dvc  train-labels-idx1-ubyte.gz.dvc
infer/: test_results.csv.dvc
mlops_project/: client_triton.py  convert_model.py  data.py  infer.py  model.py  run_server.py  test_server.py  train.py  utils.py
mlops_project/conf/: config.py  config.yaml
mlops_project/conf/running_type/: infer.yaml  train.yaml
model_repository/onnx-model/: config.pbtxt
model_repository/onnx-model/1/: model.onnx.dvc
models/: .gitignore  best_model.onnx.dvc  best_model.xyz.dvc  onnx_model.dvc  to_tensorrt.sh
