[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["Nikolay Lubin <nklubin@avito.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = "^2.0.1"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
numpy = "^1.26.0"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
