[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["Nikolay Lubin <lubin.nk@physetch.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = "^2.0.1"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
numpy = "^1.26.0"
pre-commit = "^3.4.0"
dvc = "^3.30.1"
dvc-gdrive = "^2.20.0"
lightning = "^2.1.2"
mlflow = "^2.8.1"
onnxruntime = "^1.16.3"
onnx = "^1.15.0"
pydantic = "^2.5.2"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
